            - The alias homologyH1() is now deprecated.
            - Renamed TeXName() to texName().  The old name is kept but
              deprecated.
        Class MarkedAbelianGroup:
            - New move constructor.
            - New copy assignment and move assignment operators.
            - Added member and global swap() functions.
            - The chain complex constructors now explicitly check that
              the two matrices have compatible dimensions, and throw an
              exception if this is not true.
            - Now uses the mathematical class regina::Vector<Integer> instead of
              the non-mathematical class std::vector<Integer> for all arguments
              and return values.
            - All functions that used to return empty vectors on error now
              throw exceptions instead.
            - All functions that used to return a std::unique_ptr<X> now
              just return an X by value (which can then be moved from).
            - Constructors that used to take (const MatrixInt&) arguments
              now take a MatrixInt by value.
            - Removed isChainComplex(), since this should always be true
              by the constructor preconditions.  If you need to test this
              for debugging purposes, just check (M*N).isZero().
            - Renamed several functions: M() to m(), N() to n(), rankCC() to
              ccRank(), boundaryMap() to boundaryOf(), minNumberOfGenerators()
              to snfRank(), minNumberCycleGens() to cycleRank(), and
              writeAsBoundary() to asBoundary().
              The old names are kept as deprecated aliases.
        Class MarkedVector:
            - New convenience routine clear_destructive().
            - New typedefs value_type, reference and const_reference.
            - New global swap() to complement the existing member swap().
            - Granted access to the reserve() member function.
        Class Matrix: