@@ -2,7 +2,7 @@
 New marked abelian group
 ------------------------
 
-Group: Z + Z_6
+Group: Z + Z_6 (Z^3 -> Z^5 -> Z^1)
 Free generators:
 0: ( -1 0 0 0 1 )
 Torsion generators:
@@ -12,7 +12,7 @@ Torsion generators:
 New marked abelian group
 ------------------------
 
-Group: 2 Z + 2 Z_2
+Group: 2 Z + 2 Z_2 (Z^2 -> Z^5 -> Z^1)
 Free generators:
 0: ( -1 0 0 1 0 )
 1: ( -1 0 0 0 1 )
@@ -24,10 +24,10 @@ Torsion generators:
 New homomorphism
 ----------------
 
-Hom: 2 Z + 2 Z_2 --> Z + Z_6
-Kernel: Z + Z_2
-Cokernel: Z_5
-Image: Z + Z_6
+Hom: 2 Z + 2 Z_2 (Z^2 -> Z^5 -> Z^1) --> Z + Z_6 (Z^3 -> Z^5 -> Z^1)
+Kernel: Z + Z_2 (Z^2 -> Z^3 -> Z^1)
+Cokernel: Z_5 (Z^5 -> Z^2 -> Z^1)
+Image: Z + Z_6 (Z^5 -> Z^4 -> Z^1)
 Reduced Matrix (torsion coordinates appear first):
 0 3 0 2
 0 0 5 0
@@ -36,10 +36,10 @@ Reduced Matrix (torsion coordinates appear first):
 New homomorphism
 ----------------
 
-Hom: 2 Z + 2 Z_2 --> Z + Z_6
-Kernel: Z + Z_2
-Cokernel: Z_15
-Image: Z + Z_2
+Hom: 2 Z + 2 Z_2 (Z^2 -> Z^5 -> Z^1) --> Z + Z_6 (Z^3 -> Z^5 -> Z^1)
+Kernel: Z + Z_2 (Z^2 -> Z^3 -> Z^1)
+Cokernel: Z_15 (Z^5 -> Z^2 -> Z^1)
+Image: Z + Z_2 (Z^5 -> Z^4 -> Z^1)
 Reduced Matrix (torsion coordinates appear first):
 0 3 0 0
 0 0 10 15
@@ -48,10 +48,10 @@ Reduced Matrix (torsion coordinates appear first):
 New homomorphism
 ----------------
 
-Hom: 2 Z + 2 Z_2 --> Z + Z_6
-Kernel: 2 Z + Z_2
-Cokernel: Z
-Image: Z_6
+Hom: 2 Z + 2 Z_2 (Z^2 -> Z^5 -> Z^1) --> Z + Z_6 (Z^3 -> Z^5 -> Z^1)
+Kernel: 2 Z + Z_2 (Z^2 -> Z^4 -> Z^1)
+Cokernel: Z (Z^5 -> Z^2 -> Z^1)
+Image: Z_6 (Z^6 -> Z^4 -> Z^1)
 Reduced Matrix (torsion coordinates appear first):
 3 3 2 4
 0 0 0 0
