@@ -8,15 +8,15 @@
 3 ℤ + ℤ₁₇
 3 Z + Z_17
 
-2 Z
-2 Z
-2 ℤ
-2 Z
+2 Z (Z^2 -> Z^2 -> Z^2)
+2 Z (Z^2 -> Z^2 -> Z^2)
+2 ℤ (ℤ² → ℤ² → ℤ²)
+2 Z (Z^2 -> Z^2 -> Z^2)
 
-Z + Z_23
-Z + Z_23
-ℤ + ℤ₂₃
-Z + Z_23
+Z + Z_23 (Z^2 -> Z^2 -> Z^2)
+Z + Z_23 (Z^2 -> Z^2 -> Z^2)
+ℤ + ℤ₂₃ (ℤ² → ℤ² → ℤ²)
+Z + Z_23 (Z^2 -> Z^2 -> Z^2)
 
 - x^3 + 4 x - 2
 - x^3 + 4 x - 2
